# jz-debug-ui

./: .gitignore  CMakeLists.txt  README.md  debug-ui-plan.md  dui.props
docs/: api-reference.md
docs/superpowers/plans/: 2026-05-11-debug-ui-framework.md
docs/superpowers/specs/: 2026-05-11-debug-ui-framework-design.md
src/: dui.h  dui_app.cpp  dui_app.h  dui_canvas.cpp  dui_canvas.h  dui_commands.cpp  dui_commands.h  dui_demo_setup.cpp  dui_demo_setup.h  dui_detail.cpp  dui_detail.h  dui_draw_all.cpp  dui_draw_all.h  dui_entity_log.cpp  dui_entity_log.h  dui_events.cpp  dui_events.h  dui_ext.cpp  dui_ext.h  dui_hotkeys.cpp  dui_hotkeys.h  dui_inspector.cpp  dui_inspector.h  dui_layers.cpp  dui_layers.h  dui_log.cpp  dui_log.h  dui_menubar.cpp  dui_menubar.h  dui_metrics.cpp  dui_metrics.h  dui_minimap.cpp  dui_minimap.h  dui_mock.cpp  dui_mock.h  dui_pins.cpp  dui_pins.h  dui_profiler.cpp  dui_profiler.h  dui_replay.cpp  (+15 more)
tests/: test_ring_buffer.cpp
